--- a/ubuntu/conf/lamp/vinicius.html
+++ b/ubuntu/conf/lamp/vinicius.html
@@ -8,15 +8,45 @@
 	<title>Vinicius Yuji</title>
 </head>
 <body>
-	<h1>VINICIUS YUJI NISHIOKA</h1>
-	<a href="http://172.16.10.20/wp/">CURRICULO NO WORDPRESS</a>
-	<div class="imagem">
-		<br>
-		<img src="lain-2.jpeg" alt="change your avatar">
-	</div>
-	<p>Vinicius</p>
+	<h1>VINICIUS YUJI NISHIOKA<br></h1>
+	<p>OBJETIVO</p>
+	<p>25 anos, procuro oportunidades para adquirir experiência dentro do mercado de trabalho,
+		tranquei o curso de Engenharia de Computação (UNIPAMPA - Bagé, RS), mas ainda
+		pretendo terminá-lo futuramente. Facilidade com atividades lógicas e em aprender, 
+		especialmente na área de exatas e da informática.<br></p>
+	<p>FORMAÇÃO</p>
+	<ul>
+		<li>Cursando Análise e Desenvolvimento de Sistemas – FIAP – Fev/2022 com formação
+			prevista para final de 2023.</li>
+		<li>Cursando Técnico em Informática - SENAC – Abr/2021 com formação prevista para
+			Nov/2022.</li>
+		<li>3º Ano do Ensino Médio - Colégio Farias Brito – Mar/2013 - Nov/2013.</li>
+		<li>1º e 2º Ano do Ensino Médio - Liceu de Artes e Ofícios de São Paulo – Fev/2011 -
+			Nov/2012.</li>
+		<li>4 Anos de Curso de Inglês - Wizard – Fev/2007 - Nov/2010.</li>
+	</ul>
+	<p>IDIOMAS</p>
+	<ul>
+		<li>Inglês Avançado</li>
+	</ul>
+	<p>PROFICIENCIAS</p>
+	<ul>
+		<li>Conhecimento na área de Hardware e Software: Servidores</li>
+		<li>Linguagens: JavaScript, C#, C++, HTML e CSS.</li>
+		<li>Banco de dados: SQL</li>
+		<li>Programas: AutoCAD, Visio e Cisco Packet Tracer</li>
+		<li>Websites: GitHub.</li>
+	</ul>
+	<p>PLUS</p>
+	<ul>
+		<li>Cursando Alura</li>
+		<li>Participação em eventos: CCXP</li>
+		<li>Engenharia de Computação Incompleta – UNIPAMPA (Bagé, RS) de 3/2015 à 11/2018.</li>
+	</ul>
+	<br><p>Acesso ao:</p><a href="http://172.16.10.20/wp/">CURRICULO NO WORDPRESS</a>
+	<p></p>
 </body>
 <footer>
-	<p>2022</p>
+	<p>Ultima atualização - 18/02/2022</p>
 </footer>
 </html>
