--- a/ubuntu/conf/lamp/vinicius.html
+++ b/ubuntu/conf/lamp/vinicius.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1>VINICIUS YUJI NISHIOKA<br></h1>
+	<img src="foto-linkedin.jpeg" alt="foto">
 	<p>OBJETIVO</p>
 	<p>25 anos, procuro oportunidades para adquirir experiência dentro do mercado de trabalho,
 		tranquei o curso de Engenharia de Computação (UNIPAMPA - Bagé, RS), mas ainda
